those constraints is a real pain in the ass

--- a/Дым/ru.lproj/Main.storyboard
+++ b/Дым/ru.lproj/Main.storyboard
@@ -965,54 +965,103 @@
             <objects>
                 <viewController id="aGf-UQ-bA9" customClass="ContactsOurTeamDetailViewController" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="ozB-0P-VqA"/>
-                        <viewControllerLayoutGuide type="bottom" id="8np-kd-7zz"/>
+                        <viewControllerLayoutGuide type="top" id="LFV-8b-fUc"/>
+                        <viewControllerLayoutGuide type="bottom" id="0uN-kQ-k5s"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="Wp6-nQ-b8i">
+                    <scrollView key="view" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" id="rPe-G4-csc">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wTO-Ll-zZh" userLabel="nameBack">
-                                <rect key="frame" x="0.0" y="258" width="600" height="70"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2KJ-fw-p9x" userLabel="Content View">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="c3w-Vm-EAv" userLabel="nameBack">
+                                        <rect key="frame" x="0.0" y="258" width="600" height="70"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="q1J-Ge-t0t">
+                                        <rect key="frame" x="0.0" y="258" width="600" height="70"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="50"/>
+                                        <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="adjustsFontSizeToFitWidth" value="YES"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </label>
+                                    <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TvI-O5-d1X" userLabel="positionBack">
+                                        <rect key="frame" x="0.0" y="348" width="600" height="70"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Position" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="n1j-he-Ioe">
+                                        <rect key="frame" x="0.0" y="348" width="600" height="70"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="boolean" keyPath="adjustsFontSizeToFitWidth" value="NO"/>
+                                        </userDefinedRuntimeAttributes>
+                                    </label>
+                                    <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="tcz-Zh-iap" userLabel="descriptionBack">
+                                        <rect key="frame" x="0.0" y="435" width="600" height="165"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Description" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="lxc-7I-JJU">
+                                        <rect key="frame" x="0.0" y="435" width="600" height="165"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="rH8-mD-wM4">
+                                        <rect key="frame" x="175" y="0.0" width="250" height="250"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="250" id="gbo-tm-Zuz"/>
+                                            <constraint firstAttribute="height" constant="250" id="mwp-oX-1Zk"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="q1J-Ge-t0t" firstAttribute="trailing" secondItem="c3w-Vm-EAv" secondAttribute="trailing" id="0ji-bG-x26"/>
+                                    <constraint firstItem="lxc-7I-JJU" firstAttribute="bottom" secondItem="tcz-Zh-iap" secondAttribute="bottom" id="86i-Jl-KoX"/>
+                                    <constraint firstItem="n1j-he-Ioe" firstAttribute="top" secondItem="TvI-O5-d1X" secondAttribute="top" id="8gW-Jt-bOl"/>
+                                    <constraint firstItem="TvI-O5-d1X" firstAttribute="width" secondItem="2KJ-fw-p9x" secondAttribute="width" id="EiF-Ec-M5E"/>
+                                    <constraint firstItem="n1j-he-Ioe" firstAttribute="bottom" secondItem="TvI-O5-d1X" secondAttribute="bottom" id="HxV-AN-jb6"/>
+                                    <constraint firstItem="q1J-Ge-t0t" firstAttribute="height" secondItem="c3w-Vm-EAv" secondAttribute="height" id="J2h-OE-f3a"/>
+                                    <constraint firstItem="c3w-Vm-EAv" firstAttribute="top" secondItem="rH8-mD-wM4" secondAttribute="bottom" constant="8" id="LAN-lQ-Upg"/>
+                                    <constraint firstItem="q1J-Ge-t0t" firstAttribute="width" secondItem="c3w-Vm-EAv" secondAttribute="width" id="T44-1D-wsx"/>
+                                    <constraint firstItem="q1J-Ge-t0t" firstAttribute="leading" secondItem="c3w-Vm-EAv" secondAttribute="leading" id="Xec-hu-rN4"/>
+                                    <constraint firstItem="rH8-mD-wM4" firstAttribute="centerX" secondItem="2KJ-fw-p9x" secondAttribute="centerX" id="YhZ-Tv-jnn"/>
+                                    <constraint firstItem="tcz-Zh-iap" firstAttribute="top" secondItem="TvI-O5-d1X" secondAttribute="bottom" constant="17" id="bNG-sy-CZ7"/>
+                                    <constraint firstItem="n1j-he-Ioe" firstAttribute="trailing" secondItem="TvI-O5-d1X" secondAttribute="trailing" id="ciq-pC-FSv"/>
+                                    <constraint firstItem="n1j-he-Ioe" firstAttribute="height" secondItem="TvI-O5-d1X" secondAttribute="height" id="eTL-Dm-3KZ"/>
+                                    <constraint firstItem="tcz-Zh-iap" firstAttribute="centerX" secondItem="2KJ-fw-p9x" secondAttribute="centerX" id="egg-Re-RSm"/>
+                                    <constraint firstItem="lxc-7I-JJU" firstAttribute="top" secondItem="tcz-Zh-iap" secondAttribute="top" id="fGM-5Z-rad"/>
+                                    <constraint firstItem="n1j-he-Ioe" firstAttribute="leading" secondItem="TvI-O5-d1X" secondAttribute="leading" id="iDL-zj-uMW"/>
+                                    <constraint firstItem="lxc-7I-JJU" firstAttribute="trailing" secondItem="tcz-Zh-iap" secondAttribute="trailing" id="mdl-uj-b31"/>
+                                    <constraint firstItem="q1J-Ge-t0t" firstAttribute="top" secondItem="c3w-Vm-EAv" secondAttribute="top" id="nT3-nK-bG4"/>
+                                    <constraint firstItem="q1J-Ge-t0t" firstAttribute="bottom" secondItem="c3w-Vm-EAv" secondAttribute="bottom" id="qbC-Ff-BvK"/>
+                                    <constraint firstItem="TvI-O5-d1X" firstAttribute="top" secondItem="c3w-Vm-EAv" secondAttribute="bottom" constant="20" id="s1z-GC-vZF"/>
+                                    <constraint firstItem="rH8-mD-wM4" firstAttribute="top" secondItem="2KJ-fw-p9x" secondAttribute="top" id="spA-Sa-re3"/>
+                                    <constraint firstItem="tcz-Zh-iap" firstAttribute="leading" secondItem="2KJ-fw-p9x" secondAttribute="leadingMargin" constant="-20" id="xdK-bz-AJe"/>
+                                    <constraint firstItem="n1j-he-Ioe" firstAttribute="width" secondItem="TvI-O5-d1X" secondAttribute="width" id="yFU-74-gJf"/>
+                                    <constraint firstItem="lxc-7I-JJU" firstAttribute="leading" secondItem="tcz-Zh-iap" secondAttribute="leading" id="zIb-3h-QXG"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="tcz-Zh-iap" secondAttribute="trailing" constant="-20" id="zcP-FM-nEx"/>
+                                    <constraint firstItem="c3w-Vm-EAv" firstAttribute="width" secondItem="2KJ-fw-p9x" secondAttribute="width" id="ziZ-O8-Bm3"/>
+                                </constraints>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="NkE-2j-34L" userLabel="positionBack">
-                                <rect key="frame" x="0.0" y="348" width="600" height="70"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gHc-FF-TtA" userLabel="descriptionBack">
-                                <rect key="frame" x="0.0" y="446" width="600" height="154"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Name" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sTv-Zx-KPi">
-                                <rect key="frame" x="0.0" y="258" width="600" height="70"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Description" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UZS-Cc-JZF">
-                                <rect key="frame" x="0.0" y="446" width="600" height="154"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="gc6-Vv-Fqb">
-                                <rect key="frame" x="175" y="0.0" width="250" height="250"/>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Position" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6vN-MO-eai">
-                                <rect key="frame" x="0.0" y="348" width="600" height="70"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="50"/>
-                                <color key="textColor" red="0.59999999999999998" green="0.56078431370000004" blue="0.23921568630000001" alpha="1" colorSpace="calibratedRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                         </subviews>
-                        <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="2KJ-fw-p9x" secondAttribute="trailing" id="EcD-zO-tJh"/>
+                            <constraint firstItem="2KJ-fw-p9x" firstAttribute="top" secondItem="rPe-G4-csc" secondAttribute="top" id="Odd-ln-ahJ"/>
+                            <constraint firstItem="2KJ-fw-p9x" firstAttribute="leading" secondItem="rPe-G4-csc" secondAttribute="leading" id="lsU-o5-cmX"/>
+                            <constraint firstItem="0uN-kQ-k5s" firstAttribute="top" secondItem="2KJ-fw-p9x" secondAttribute="bottom" id="pvu-jZ-9zH"/>
+                        </constraints>
+                    </scrollView>
                     <connections>
-                        <outlet property="teamMemberDescriptionMember" destination="UZS-Cc-JZF" id="kYx-Tc-Elr"/>
-                        <outlet property="teamMemberImage" destination="gc6-Vv-Fqb" id="5Rc-vo-9uk"/>
-                        <outlet property="teamMemberNameLabel" destination="sTv-Zx-KPi" id="s3j-j1-Xn1"/>
-                        <outlet property="teamMemberPositionLabel" destination="6vN-MO-eai" id="Tei-5a-7OK"/>
+                        <outlet property="teamMemberDescriptionMember" destination="lxc-7I-JJU" id="nG0-z6-Dob"/>
+                        <outlet property="teamMemberImage" destination="rH8-mD-wM4" id="Tz6-Mn-4Fv"/>
+                        <outlet property="teamMemberNameLabel" destination="q1J-Ge-t0t" id="Jpl-PU-Qf5"/>
+                        <outlet property="teamMemberPositionLabel" destination="n1j-he-Ioe" id="hJU-k1-Q59"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="DKs-9e-Ht7" userLabel="First Responder" sceneMemberID="firstResponder"/>
